apps/traefik/ingressRoute.yaml
# dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik-v2
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.192.168.122.100.nip.io`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
    - match: Host(`traefik.192.168.122.100.nip.io`) && PathPrefix(`/ping`)
      kind: Rule
      services:
        - name: ping@internal
          kind: TraefikService
    - match: Host(`traefik.192.168.122.100.nip.io`) && PathPrefix(`/metrics`) 
      kind: Rule
      services:
        - name: prometheus@internal 
          kind: TraefikService
